<resources>
    <string name="hello">Hello World, LoginTestActivity!</string>
    <string name="app_name">幼乐宝</string>
    <string name="warning">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020请输入您在幼儿园登记的手机号码进行验证，该功能需要连接网络，谢谢！</string>
    <string name="inuputnum">请输入您的手机号码</string>
    <string name="inuputpwd">请输入您的密码</string>
    <string name="inuput_auth_code">输入验证码</string>
    <string name="send">发送</string>
    <string name="getAuthCode">获取验证码</string>
    <string name="getAuthCodeSuccess">获取验证码成功，稍后会用短信将该验证码发送到您的手机上，谢谢！</string>
    <string name="getAuthCodeCountDown">重新获取 %1$s秒</string>
    <string name="phone_input_error">无效手机号码，请检查后重新输入，谢谢!</string>
    <string name="auth_code_input_error">无效验证码,请检查后重新输入，谢谢!</string>
    <string name="auth_code_invalid">验证码错误，请确认输入是否正确，如果点击了重新获取验证码，请输入最后一次收到的验证码，谢谢！</string>
    <string name="auth_code_error">验证码错误，请重新输入，谢谢！</string>
    <string name="notice">提示</string>
    <string name="error">错误</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="exit_app">确认退出幼乐宝么？</string>
    <string name="confirm_exit">确定要退出登录？退出后无法接收任何消息!</string>
    <string name="unknow_error">未知错误</string>
    <string name="setting">设置</string>
    <string name="account_name">账号名称 : %1$s</string>
    <string name="exit_login">退出登录</string>
    <string name="change_pwd">修改密码</string>
    <string name="forget_pwd"><u>忘记密码</u></string>
    <string name="choose_another_account"><u>其他账户登录</u></string>
    <string name="reset_pwd">确认修改</string>
    <string name="forget_pwd_notice">1.获取短信验证码\n2.按照提示输入验证码和新密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="reinput_new_pwd">请重复输入新密码</string>
    <string name="change_pwd_notice">		请按照提示,输入旧密码和新密码，然后点击修改密码按钮</string>
    <string name="server_error">服务器忙，请稍后再试，谢谢！</string>
    <string name="net_error">网络异常，请确认wifi或数据连接已经打开，稍后再试，谢谢！</string>
    <string name="validate_phone_num">正在校验手机号码，请稍候...</string>
    <string name="getting_auth_code">正在获取校验码，请稍候...</string>
    <string name="checking_auth_code">正在验证校验码，请稍候...</string>
    <string name="bind">绑定</string>
    <string name="startmain">进入应用</string>
    <string name="firstwelcome">尊敬的用户 %1$s 先生/女士:\n您的手机 %2$s
		已经绑定成功并自动登录。您的账号名就是手机号码，初始密码是手机号码的后8位。
		\n\n提示：如需修改密码，请在进入应用后，点击屏幕右上角的"设置"按钮，进行修改.</string>
    <string name="aucodeContent">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020尊敬的%1$s用户您好，您的手机已经通过验证，请获取短信验证码并进行账号绑定，谢谢！\n\n特别提示:
\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020该验证码的有效时间为2分钟,请在2分钟内进行绑定操作</string>
    <string name="reset_pwd_success">密码重置成功，请使用新密码进行登录，谢谢！</string>
    <string name="change_pwd_success">密码修改成功！</string>
    <string name="change_pwd_failed">密码修改失败！</string>
    <string name="update">更新</string>
    <string name="pwd_confirm_error">2次密码输入不一致，请重新输入，谢谢！</string>
    <string name="login">登录</string>
    <string name="pwdreseting">正在重置密码...</string>
    <string name="loginning">正在登录...</string>
    <string name="pwd_incorrect">密码错误，请重新输入,谢谢！</string>
    <string name="pwd_format_error">密码格式有误，请重新输入，谢谢！\n密码由数字或英文组成，长度是6-16位</string>
    <string name="old_pwd_format_error">旧密码格式有误，请重新输入，谢谢！\n密码由数字或英文组成，长度是6-16位</string>
    <string name="new_pwd_format_error">新密码格式有误，请重新输入，谢谢！\n密码由数字或英文组成，长度是6-16位</string>
    <string name="login_notice">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020尊敬的 %1$s 用户，您好！您的手机已激活过，请输入密码进行登录，谢谢！</string>
    <string name="notice_title">通知消息</string>
    <string name="check_version">检查更新</string>
    <string name="bind_failed">账号绑定失败，请重新登录</string>
    <string name="checking_new_version">正在检查更新，请稍后...</string>
    <string name="no_new_version">当前已经是最新版本</string>
    <string name="update_now">检查到新版本,是否更新？</string>
    <string name="find_new_version">检查到新版本</string>
    <string name="location">定位测试</string>
    <string name="locationInfo">定位信息</string>
    <string name="check_swipcard_record">查看刷卡历史记录</string>
    <string name="check_other_notice_record">查看通知历史记录</string>
    <string name="remove_all">清空</string>
    <string name="delete_location_confirm">删除该条定位记录？</string>
    <string name="delete_all_location_confirm">删除全部定位记录？</string>
    <string name="delete_notice_confirm">删除该条通知？</string>
    <string name="delete_all_notice_confirm">删除全部通知？</string>
    <string name="add_location_num">添加定位号码</string>
    <string name="location_num">定位号码: %1$s</string>
    <string name="nichname">昵称: %1$s</string>
    <string name="delete">删除</string>
    <string name="delete_binded_num">删除该条定位号码？</string>
    <string name="change">修改</string>
    <string name="change_lbs_num">修改定位号码</string>
    <string name="location_num_title">定位号码</string>
    <string name="nichname_title">昵称</string>
    <string name="add">添加</string>
    <string name="max_binded_num_alert">最多只能绑定%1$d个定位号码！</string>
    <string name="must">必填</string>
    <string name="opt">可选</string>
    <string name="choose_lbs_num">请选择定位号码</string>
    <string name="pls_bind_lbs_num">还未绑定定位号码，请通过“设置->定位号码管理->添加定位号码”，绑定定位号码,谢谢！</string>
    <string name="old_pwd_not_equal">旧密码错误，请重新输入</string>
    <string name="bind_location">定位号码管理</string>
    <string name="swipcard_notice">刷卡通知</string>
    <string name="cookbook_notice">宝宝食谱</string>
    <string name="other_notice">其它通知</string>
    <string name="location_record">定位历史记录</string>
    <string name="locationTitle">定位</string>
    <string name="noticeTitle">通知</string>
    <string name="doLocation">发起定位</string>
    <string name="sendsmsfail">短信发送失败，请确认手机信号畅通以及话费足够，谢谢！</string>
    <string name="loadLocRecord">查看定位历史记录</string>
    <string name="sendingLocCommand">正在发送定位命令...</string>
    <string name="sendSmsNotice">将通过发送短信来获取定位消息，按照正常短信费用进行资费，确认发送？</string>
    <string name="sendsmsSuccess">短信发送成功，稍后定位通知将会发送到手机上，请保持手机网络畅通,谢谢！</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="extralunch">加餐</string>
    <string name="dinner">晚餐</string>
    <string name="homework">亲子作业</string>
    <string name="homework_content">作业内容</string>
    <string name="pnotice">园内公告</string>
    <string name="cnotice">班级通知</string>
    <string name="cook">每周食谱</string>
    <string name="study">学习内容</string>
    <string name="dairy">每日育情</string>
    <string name="swap">接送信息</string>
    <string name="schedule">课程表</string>
    <string name="baby_default_nickname">宝宝</string>
    <string name="set_baby_nickname">设置宝贝昵称</string>
    <string name="baby_age_limit">宝宝年龄必须超过1岁哦</string>
    <string name="age_year"> %1$s岁 </string>
    <string name="age_month"> %1$s个月</string>
    <string name="set_birthday">设置宝贝生日</string>
    <string name="school_info">关于我园</string>
    <string name="contact_school">联系我们</string>
    <string name="about_cocobabys">关于我们</string>
    <string name="no_more_chat">没有更多消息了</string>
    <string name="no_more_news">没有更多公告了</string>
    <string name="no_more_work">没有更多作业了</string>
    <string name="get_school_info">获取幼儿园信息...</string>
    <string name="get_child_info_fail">获取幼儿信息失败</string>
    <string name="reget_child_info">获取幼儿信息失败,请联系幼儿园确认幼儿信息已经绑定，且网络正常后，重新启动应用！</string>
    <string name="mon">星期一</string>
    <string name="tue">星期二</string>
    <string name="wed">星期三</string>
    <string name="thu">星期四</string>
    <string name="fri">星期五</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="change_child">切换宝宝</string>
    <string name="select_child">选择宝宝</string>
    <string name="select_success">切换成功!</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="child_info_is_null">小孩信息还未同步，请稍后再试,谢谢！</string>
    <string name="user_response">用户反馈</string>
    <string name="upload_icon_failed">上传头像失败</string>
    <string name="uploading_icon">正在上传头像...</string>
    <string name="uploading_child_info">正在上传小孩信息...</string>
    <string name="uploading_child_info_failed">上传小孩信息失败</string>
    <string name="feed_back">用户反馈</string>
    <string name="sending">发送中，请稍候</string>
    <string name="send_success">发送成功!</string>
    <string name="send_fail">发送失败!</string>
    <string name="from">来自 %1$s</string>
    <string name="delete_data">删除数据?</string>
    <string name="getting_swipe_info">正在获取刷卡记录...</string>
    <string name="loading_data">正在获取数据...</string>
    <string name="deleting_data">正在删除数据...</string>
    <string name="coment_from">来自 %1$s 的评语:</string>
    <string name="load_data_fail">获取数据失败</string>
    <string name="no_more_edu">没有更多的评价了</string>
    <string name="no_edu">没有评价</string>
    <string name="pls_input_chat">请输入留言内容</string>
    <string name="send_icon_success">发送图片成功! </string>
    <string name="send_icon_fail">发送图片失败! </string>
    <string name="new_chat">新建留言 </string>
    <string name="write_notice">写留言 </string>
    <string name="education">在园表现 </string>
    <string name="interaction">家园互动 </string>
    <string name="weibo">官方微博 : </string>
    <string name="weixin">官方微信 : </string>
    <string name="weixin_account">幼乐宝</string>
    <string name="weibo_account">weibo.com/5066323670</string>
    <string name="homepage">官方网站 : </string>
    <string name="homepage_url">http://www.cobabys.com</string>
    <string name="email">电子邮箱 : </string>
    <string name="email_address">business@cobabys.com</string>
    <string name="support_phone">联系电话 : </string>
    <string name="invalid_nick">昵称不能为空</string>
    <string name="support_phone_num">400-008-0300\n028-61905012</string>
    <string name="tech_support">技术支持 : </string>
    <string name="tech_phone_num">028-69190987</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_content">幼乐宝（成都库贝信息技术有限公司）---提供宝宝、家长和幼儿园三方互动沟通和信息发布服务，并提供丰富的后续服务和专业的技术保障。</string>
    <string name="get_auth_code_fail">获取验证码失败</string>
    <string name="get_auth_code_too_often">验证码获取过于频繁，请稍后再试</string>
    <string name="emotion_explain">情绪稳定、适应集体生活、乐于亲近老师和同学</string>
    <string name="dining_explain">能愉快的进餐、不挑食、能吃完一份饭菜</string>
    <string name="rest_explain">能安静的就寝、正确地穿脱衣帽和鞋袜、按时起床</string>
    <string name="activity_explain">乐于参加各种集体活动、注意力集中、能积极发言</string>
    <string name="exercise_explain">喜欢参加体育活动、能坚持锻炼身体、并注意运动安全</string>
    <string name="self_care_explain">能自己收拾整理玩具和用具、自己入厕</string>
    <string name="manner_explain">对人有礼貌、会主动使用礼貌用语、尊重他人、不打扰别人</string>
    <string name="game_explain">喜欢玩游戏、能与同学分享玩具，学习并遵守游戏规则</string>
    <string name="token_invalid">无效账号，请重新登录，或联系幼儿园处理，谢谢！</string>
    <string name="invalid_phone">无效电话号码: %1$s</string>
    <string name="phone_invalid">账号未激活或已过期，请重新登录，谢谢！</string>
    <string name="phone_num_is_already_login">该手机号已经在其他手机上登录，为了您账号的安全，请重新登录并及时修改密码！</string>
    <string name="pwd_has_changed">密码被修改，请重新登录！</string>
    <string name="no_cookbook_yet">学校目前还未发布食谱</string>
    <string name="no_schedule_yet">学校目前还未发布课程表</string>
    <string name="get_child_info">获取小孩信息</string>
    <string name="versionName">版本号:</string>
    <string name="size">版本大小:</string>
    <string name="summary">更新说明:</string>
    <string name="experence">成长经历</string>
    <string name="refresh_data">更新数据</string>
    <string name="refresh">刷新</string>
    <string name="icon_count">%1$d/%2$d</string>
    <string name="max_icon_select">最多只能选择%1$d张图片</string>
    <string name="invitation">邀请家人</string>
    <string name="updateCard">接送卡管理</string>
    <string name="inputnInvitationNum">输入您要邀请的手机号码</string>
    <string name="sendAuthCodeToPhone">获取邀请码</string>
    <string name="inuputRelation">输入被邀请人亲属关系，例如:爸爸,妈妈</string>
    <string name="confirmInvite">确认邀请</string>
    <string name="relation_name">输入被邀请人姓名</string>
    <string name="inviteNotice">注：请向被邀请人获取正确的邀请码(20分钟内有效)</string>
    <string name="input_invitation_code">输入邀请码</string>
</resources>