<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <include
        android:id="@+id/header"
        layout="@layout/topbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/small_logo" />

        <TextView
            android:id="@+id/version"
            android:layout_marginTop="5dp"
            style="@style/NormalTextviewStyle"
            android:layout_below="@+id/logo"
            android:textColor="@color/red"
            android:gravity="center_horizontal"
            android:text="" />
        
        <TextView
            android:id="@+id/about_us_view"
            style="@style/NormalTextviewStyle"
            android:layout_below="@+id/version"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/about_us_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_us_view"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/homepage" />

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginBottom="10dp"
                    android:text="@string/homepage_url" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/weixin" />

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginBottom="10dp"
                    android:text="@string/weixin_account" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/weibo" />

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginBottom="10dp"
                    android:text="@string/weibo_account" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/email" />

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginBottom="10dp"
                    android:text="@string/email_address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/support_phone" />

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginBottom="10dp"
                    android:text="@string/support_phone_num" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tech_support" />

                <TextView
                    style="@style/NormalTextviewStyle"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tech_phone_num" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>