<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:my="http://schemas.android.com/apk/res/com.cocobabys"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/topbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:onClick="updateCard"
                android:text="@string/updateCard"
                android:textSize="24sp" />

            <Button
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:onClick="invite"
                android:text="@string/invitation"
                android:textSize="24sp" />

            <Button
                android:id="@+id/checkVersion"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/check_version"
                android:textSize="24sp" />

            <Button
                android:id="@+id/userResponse"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/user_response"
                android:textSize="24sp" />

            <Button
                android:id="@+id/aboutSchool"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/school_info"
                android:textSize="24sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/bindLocation"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/bind_location"
                android:textSize="24sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/changePWD"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/change_pwd"
                android:textSize="24sp" />

            <Button
                android:id="@+id/changeChild"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/change_child"
                android:textSize="24sp" />

            <Button
                android:id="@+id/about_cocobabys"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/about_cocobabys"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exitLogin"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:text="@string/exit_login"
                android:textSize="24sp" />

            <Button
                android:id="@+id/changeHost"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:textSize="24sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/changeVideo"
                style="@style/btn_style"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn"
                android:gravity="center"
                android:textSize="24sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>