<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/topbar" />

    <EditText
        android:id="@+id/inuputphoneView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:digits="0123456789"
        android:hint="@string/inputnInvitationNum"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingLeft="10dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <EditText
            android:id="@+id/inuputAuthCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/sendAuthCode"
            android:digits="0123456789"
            android:hint="@string/input_invitation_code"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:paddingRight="4dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.cocobabys.customview.CountDownButton
            android:layout_alignBottom="@+id/inuputAuthCode"
            android:id="@+id/sendAuthCode"
            style="@style/btn_style_small"
            android:layout_width="140dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/small_btn"
            android:onClick="sendAuthCode"
            android:text="@string/sendAuthCodeToPhone"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:text="@string/inviteNotice"
        android:textColor="@color/red"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/relation_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/relation_name"
        android:inputType="textPhonetic"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inuputRelation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/inuputRelation"
        android:inputType="textPhonetic"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        style="@style/btn_style_small"
        android:background="@drawable/small_btn"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:onClick="confirmInvite"
        android:text="@string/confirmInvite"
        android:textSize="14sp" />

</LinearLayout>