<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/second"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/internal_logo" />

    <RelativeLayout
        android:id="@+id/second"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:background="@drawable/login_bg"
        android:padding="20dp" >

        <TextView
            android:id="@+id/resetPwdNoticeView"
            style="@style/NormalTextviewStyle"
            android:layout_centerHorizontal="true"
            
            android:layout_marginBottom="10dp"
            android:text="@string/forget_pwd_notice"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/getAuthCodeBtn"
            style="@style/btn_style_small"
            android:layout_below="@+id/resetPwdNoticeView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/small_btn"
            android:text="@string/getAuthCode" />

        <EditText
            android:id="@+id/inputAuthCodeView"
            style="@style/input_style"
            android:layout_alignLeft="@+id/getAuthCodeBtn"
            android:layout_alignRight="@+id/getAuthCodeBtn"
            android:layout_below="@+id/getAuthCodeBtn"
            android:layout_marginTop="10dp"
            android:digits="0123456789"
            android:hint="@string/inuput_auth_code"
            android:inputType="number"
            android:maxLength="6" />

        <EditText
            android:id="@+id/inuputPWDView"
            style="@style/input_style"
            android:layout_alignLeft="@+id/getAuthCodeBtn"
            android:layout_alignRight="@+id/getAuthCodeBtn"
            android:layout_below="@+id/inputAuthCodeView"
            android:layout_marginTop="10dp"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/input_new_pwd"
            android:maxLength="16"
            android:password="true" />

        <EditText
            android:id="@+id/reInuputPWDView"
            style="@style/input_style"
            android:layout_alignLeft="@+id/getAuthCodeBtn"
            android:layout_alignRight="@+id/getAuthCodeBtn"
            android:layout_below="@+id/inuputPWDView"
            android:layout_marginTop="10dp"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/reinput_new_pwd"
            android:maxLength="16"
            android:password="true" />

        <Button
            android:id="@+id/resetPWDBtn"
            style="@style/btn_style_small"
            android:layout_below="@+id/reInuputPWDView"
            android:layout_marginTop="10dp"
            android:background="@drawable/small_btn"
            android:text="@string/reset_pwd" />
    </RelativeLayout>

</RelativeLayout>